...
fun DetailContent(
    sharedTransitionScope: SharedTransitionScope,
    animatedContentScope: AnimatedContentScope,
    @DrawableRes image: Int,
    title: String,
    basePoint: Int,
    count: Int,
    onBackClick: () -> Unit,
    onAddToCart: (count: Int) -> Unit,
    modifier: Modifier = Modifier,
) {

    var totalPoint by rememberSaveable { mutableStateOf(0) }
...
@Preview(showBackground = true, device = Devices.PIXEL_4)
@Composable
fun DetailContentPreview() {
    JetRewardTheme {
//        DetailContent(
//            R.drawable.reward_4,
//            "Jaket Hoodie Dicoding",
//            7500,
//            1,
//            onBackClick = {},
//            onAddToCart = {}
//        )
    }
...
